# viewer_3d

src/: CMakeLists.txt  Doxyfile  Makefile  config.ini  main.cc
src/controller/: application_controller.cc  application_controller.h
src/model/: entity.cc  entity.h  i_render_model.h  scene.cc  scene.h
src/model/processors/: i_file_processor.h  obj_parser.cc  obj_parser.h  primitive_builder.cc  primitive_builder.h  transform_processor.cc  transform_processor.h
src/model/utility/: transform.h
src/resources/: shaders.qrc
src/shaders/: default_fragment.glsl  default_vertex.glsl  line_fragment.glsl  line_geometry.glsl  pcircle_fragment.glsl  pcircle_geometry.glsl  shader_pool.cc  shader_pool.h
src/tests/: 3DViewer_v2_tests.cc
src/view/: i_render_view.h
src/view/render/: drawable.cc  drawable.h  render_strategy.cc  render_strategy.h  renderer.cc  renderer.h  vertex_round.cc  vertex_round.h  vertex_square.cc  vertex_square.h  wireframe_edge.cc  wireframe_edge.h
src/view/ui/: delegate.h  main_window.cc  main_window.h  main_window.ui  settings_window.cc  settings_window.h  settings_window.ui
src/view/utility/: projection.h
